Fix a copy and pasto with the names of the radio buttons on the file contents tab which was resulting in no option being checked on the changeset tab.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -217,13 +217,13 @@
 
                               <div class="col-md-6 text-right">
                                 <label>
-                                  <input type="radio" name="changesets_operator" checked value="and" ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.operator">AND Conditions
+                                  <input type="radio" name="contents_operator" checked value="and" ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.operator">AND Conditions
                                 </label>
                               </div>
 
                               <div class="col-md-6 text-left">
                                 <label>
-                                  <input type="radio" name="changesets_operator" value="or" ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.operator">OR Conditions
+                                  <input type="radio" name="contents_operator" value="or" ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.operator">OR Conditions
                                 </label>
                               </div>
 
