--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -45,9 +45,9 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
-                      <div class="panel-body">
+                      <div class="panel-body option-panel">
 
                         <fieldset>
                           <legend>Filters</legend>
@@ -73,9 +73,9 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
-                      <div class="panel-body">
+                      <div class="panel-body option-panel">
 
                         <fieldset>
                           <legend>Query</legend>
@@ -93,7 +93,7 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
                       <div class="panel-body">
 
@@ -182,7 +182,7 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
                       <div class="panel-body">
 
@@ -209,9 +209,9 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
-                      <div class="panel-body">
+                      <div class="panel-body option-panel">
 
                         <fieldset>
 
@@ -232,7 +232,7 @@
 
                   <div class="col-md-4">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default option-panel">
 
                       <div class="panel-body">
 
