--- a/Client/public/stylesheets/angular-toggle-switch.css
+++ b/Client/public/stylesheets/angular-toggle-switch.css
@@ -6,6 +6,8 @@
   overflow: hidden;
   line-height: 8px;
   min-width: 100px;
+  width: 100%;
+  height: 100%;
 }
 .switch.disabled {
   opacity: 0.5;
@@ -26,6 +28,7 @@
   padding: 4px;
   text-align: center;
   width: 33%;
+  height: 100%;
   white-space: nowrap;
   box-sizing: border-box;
   -o-box-sizing: border-box;
@@ -43,6 +46,7 @@
   background-color: #f5f5f5;
   width: 34%;
   z-index: 100;
+  min-height: 38px;
 }
 .switch .switch-on {
   left: 0%;
@@ -53,14 +57,17 @@
 .switch .swtich-left,
 .switch .switch-right {
   z-index: 1;
+  min-height: 38px;
 }
 .switch .switch-left {
   color: #fff;
   background: #005fcc;
+  min-height: 38px;
 }
 .switch .switch-right {
   color: #333;
   background: #f0f0f0;
+  min-height: 38px;
 }
 .switch .switch-animate {
   transition: left 0.5s;
@@ -159,10 +166,13 @@
 .switch span.switch-left {
   color: #fff;
   background: #428bca;
+  line-height: 30px;
 }
 .switch span.switch-right {
   color: #000;
-  background: #eeeeee;
+  background: #7BAEDA;
+  line-height: 30px;
+  color: white;
 }
 .switch.switch-primary span.switch-left {
   color: #fff;
