--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/styles/vs.css' />
 
+  <!--script src="/javascripts/jquery.min.js"></script>-->
   <script src="/javascripts/angular.min.js"></script>
   <script src="/javascripts/angular-sanitize.min.js"></script>
   <script src="/javascripts/ui-bootstrap.min.js"></script>
