Use button-primaary for the search buttons instead of button-default.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -133,7 +133,7 @@
 
                   <div class="col-md-12">
                     <div style="text-align:center;">
-                      <button type="button" class="btn btn-default" ng-click="searchChangesetsButtonClicked(changesetsUseANDOperator)">Search Changesets</button>
+                      <button type="button" class="btn btn-primary" ng-click="searchChangesetsButtonClicked(changesetsUseANDOperator)">Search Changesets</button>
                     </div>
                   </div>
 
@@ -263,7 +263,7 @@
                   <div class="col-md-12">
 
                     <div style="text-align:center;">
-                      <button type="button" class="btn btn-default" ng-click="searchContentsButtonClicked(contentsUseANDOperator, contentsIncludeDesignerFiles)">Search File Contents</button>
+                      <button type="button" class="btn btn-primary" ng-click="searchContentsButtonClicked(contentsUseANDOperator, contentsIncludeDesignerFiles)">Search File Contents</button>
                     </div>
 
                   </div>
