--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -36,252 +36,8 @@
           </div>
 
           <tabset justified="true">
-
-            <tab heading="Search Changesets">
-
-              <div class="container">
-
-                <div class="row">
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body option-panel">
-
-                        <fieldset>
-                          <legend>Filters</legend>
-                          <div class="input-group">
-                            <span class="input-group-addon">Repository:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchFilters.repository" typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'repository_suggest', 'changesets') | filter:$viewValue">
-                          </div>
-                          <div class="input-group">
-                            <span class="input-group-addon">Branch:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchFilters.branch" typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'branch_suggest', 'changesets') | filter:$viewValue">
-                          </div>
-                          <div class="input-group">
-                            <span class="input-group-addon">Author:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchFilters.author" typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'author_suggest', 'changesets') | filter:$viewValue">
-                          </div>
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body option-panel">
-
-                        <fieldset>
-                          <legend>Query</legend>
-                          <div class="input-group">
-                            <span class="input-group-addon bg-info">Message:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchTemplate.query.filtered.query.bool.must[0].match.message.query">
-                          </div>
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body">
-
-                        <fieldset>
-
-                          <legend>Options</legend>
-
-                          <div class="input-group">
-
-                            <span class="input-group-addon input-group-addon-contents-filter">Operator:</span>
-                            <div class="operator-box text-left">
-                              <toggle-switch model="changesetsUseANDOperator"
-                                             class="toggle-switch"
-                                             on-label="AND"
-                                             off-label="OR">
-                              <toggle-switch>
-                            </div>
-
-                          </div>
-
-                          <div class="input-group">
-                            <span class="input-group-addon input-group-addon-contents-filter"># Search Results:</span>
-                            <input type="text" class="form-control" placeholder="25" ng-model="changesetSearchTemplate.size">
-                          </div>
-
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <div class="row">
-
-                  <div class="col-md-12">
-                    <div style="text-align:center;">
-                      <button type="button" class="btn btn-primary" ng-click="searchChangesetsButtonClicked(changesetsUseANDOperator)">Search Changesets</button>
-                    </div>
-                  </div>
-
-                </div>
-
-                <div class="row">
-
-                  <div class="col-md-12">
-                    &nbsp;
-                  </div>
-
-                </div>
-
-              </div>
-
-            </tab>
-
-            <tab heading="Search File Contents">
-
-              <div class="container">
-
-                <div class="row">
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body">
-
-                        <fieldset>
-
-                          <legend>Filters</legend>
-
-                          <div class="input-group">
-                            <span class="input-group-addon">Repository:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="contentsSearchFilters.repository" typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'repository_suggest', 'file_contents') | filter:$viewValue">
-                          </div>
-                          <div class="input-group">
-                            <span class="input-group-addon">Branch:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="contentsSearchFilters.branch" typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'branch_suggest', 'file_contents') | filter:$viewValue">
-                          </div>
-
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body option-panel">
-
-                        <fieldset>
-
-                          <legend>Query</legend>
-
-                          <div class="input-group">
-                            <span class="input-group-addon">File Contents:</span>
-                            <input type="text" class="form-control" placeholder="..." ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.query">
-                          </div>
-
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                  <div class="col-md-4">
-
-                    <div class="panel panel-default option-panel">
-
-                      <div class="panel-body">
-
-                        <fieldset>
-
-                          <legend>Options</legend>
-
-                          <div class="input-group">
-
-                            <span class="input-group-addon input-group-addon-contents-filter">Operator:</span>
-                            <div class="operator-box text-left">
-                              <toggle-switch model="contentsUseANDOperator"
-                                             class="toggle-switch"
-                                             on-label="AND"
-                                             off-label="OR">
-                              <toggle-switch>
-                            </div>
-
-                          </div>
-
-                          <div class="input-group">
-
-                            <span class="input-group-addon input-group-addon-contents-filter">Include Designer Files:</span>
-                            <div class="operator-box text-left">
-                              <toggle-switch model="contentsIncludeDesignerFiles"
-                                             class="toggle-switch"
-                                             on-label="Yes"
-                                             off-label="No">
-                              <toggle-switch>
-                            </div>
-
-                          </div>
-
-                          <div class="input-group">
-                            <span class="input-group-addon input-group-addon-contents-filter"># Search Results:</span>
-                            <input type="text" class="form-control" placeholder="25" ng-model="fileContentsSearchTemplate.size">
-                          </div>
-
-                        </fieldset>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <div class="row">
-
-                  <div class="col-md-12">
-
-                    <div style="text-align:center;">
-                      <button type="button" class="btn btn-primary" ng-click="searchContentsButtonClicked(contentsUseANDOperator, contentsIncludeDesignerFiles)">Search File Contents</button>
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <div class="row">
-
-                  <div class="col-md-12">
-                    &nbsp;
-                  </div>
-
-                </div>
-
-              </div>
-
-            </tab>
-
+            <%- include partials/changesets-tab.ejs %>
+            <%- include partials/contents-tab.ejs %>
           </tabset>
 
         </div>
@@ -310,85 +66,8 @@
 
           &nbsp;
 
-          <div ng-repeat="hit in searchResults.changesets.hits">
-
-            <div class="container-fluid">
-
-              <div class="row">
-                <div class="col-lg-1 text-right">Repository:</div>
-                <div class="col-lg-11">
-                  <span ng-bind-html="hit._source.repository"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-1 text-right cont-search-res-label">Branch:</div>
-                <div class="col-lg-11">
-                  <span ng-bind-html="hit._source.branch"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-1 text-right">Author:</div>
-                <div class="col-lg-11">
-                  <span ng-bind-html="hit._source.author"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-1 text-right">Date/Time:</div>
-                <div class="col-lg-11">{{hit._source.changeDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
-              </div>
-              <div class="row">
-                <div class="col-lg-1 text-right">Message:</div>
-                <div class="col-lg-11">
-                  <p style="white-space: pre-wrap;" ng-bind-html="hit.highlight.message[0]"></p>
-                </div>
-              </div>
-            </div>
-
-            <hr>
-
-          </div>
-
-          <div ng-repeat="hit in searchResults.file_contents.hits">
-
-            <div class="container-fluid">
-
-              <div class="row">
-                <div class="col-lg-1 text-right">Repository:</div>
-                <div class="col-lg-8">
-                  <span ng-bind-html="hit.fields.repository"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-1 text-right">Branch:</div>
-                <div class="col-lg-8">
-                  <span ng-bind-html="hit.fields.branch"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-1 text-right">File:</div>
-                <div class="col-lg-8">
-                  <span ng-bind-html="hit.fields.file_name"></span>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-12">
-                  <div ng-repeat="highlight in hit.highlight.fragments track by $index">
-                    <div hljs source="highlight"></div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-
-            <hr>
-
-          </div>
+          <%- include partials/changesets-results.ejs %>
+          <%- include partials/contents-results.ejs %>
 
         </div>
 
