Use a simple_query for querying file contents. This still allows for term searches but also allows for more complicated queries using the query DSL.

--- a/Client/views/partials/contents-tab.ejs
+++ b/Client/views/partials/contents-tab.ejs
@@ -43,11 +43,11 @@
 
               <div class="input-group">
                 <span class="input-group-addon">File Contents:</span>
-                <input type="text" class="form-control" placeholder="..." ng-model="fileContentsSearchTemplate.query.filtered.query.bool.must[0].match.fragments.query">
+                <input type="text" class="form-control" placeholder="..." ng-model="fileContentsSearchTemplate.query.filtered.query.simple_query_string.query">
               </div>
 
             </fieldset>
-
+            
           </div>
 
         </div>
