Add a button to the file contents search panel which opens up a modal window explaining the query DSL syntax.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -17,6 +17,8 @@
   <script src="/javascripts/highlight.pack.js"></script>
   <script src="/javascripts/app.js"></script>
 
+  <%- include partials/query-syntax-modal.ejs %>
+  
 </head>
 
 <body ng-controller="CodeSearchController" class="bg-default">
