--- a/Client/views/partials/contents-tab.ejs
+++ b/Client/views/partials/contents-tab.ejs
@@ -46,6 +46,18 @@
                 <input type="text" class="form-control" placeholder="..." ng-model="fileContentsSearchTemplate.query.filtered.query.simple_query_string.query">
               </div>
 
+              <br>
+
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12">
+                      <div class="text-center">
+                        <button class="btn btn-primary btn-sm" ng-click="showQuerySyntax()">Show Query Syntax</button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
             </fieldset>
             
           </div>
