--- a/Client/views/partials/changesets-tab.ejs
+++ b/Client/views/partials/changesets-tab.ejs
@@ -39,11 +39,28 @@
           <div class="panel-body option-panel">
 
             <fieldset>
+              
               <legend>Query</legend>
+              
               <div class="input-group">
                 <span class="input-group-addon bg-info">Message:</span>
                 <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchTemplate.query.filtered.query.bool.must[0].match.message.query">
               </div>
+              
+              <!--
+              <br>
+              
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12">
+                      <div class="text-center">
+                        <button class="btn btn-primary btn-sm" ng-click="showQuerySyntax()">Show Query Syntax</button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              -->
+              
             </fieldset>
 
           </div>
